Fix an issue with text fonts not being applied on iOS

--- a/src/assets/sass/_reset.scss
+++ b/src/assets/sass/_reset.scss
@@ -25,7 +25,16 @@ html {
 body {
   margin: 0;
   overflow-x: hidden !important;
+}
+
+/**
+ * Set fonts for text & titles.
+ */
+* {
   font-family: 'Noto Sans';
+}
+h1, h2, h3, h4 {
+  font-family: 'Maven Pro';
 }
 
 /**
